--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,8 @@
     </div>
 </footer>
 
+<div id="modal" class="modal"></div>
+
 <textarea class="hidden" id="copy"></textarea>
 
 <!-- scripts -->
