[Modal] Create and position modal (#42)

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
     </div>
 </footer>
 
-<div id="modal" class="modal"></div>
+<div id="modal" class="modal box-shadow"></div>
 
 <textarea class="hidden" id="copy"></textarea>
 
