--- a/src/index.html
+++ b/src/index.html
@@ -122,45 +122,17 @@
 <script src="https://cdn.jsdelivr.net/jotted/latest/jotted.min.js"></script>
 <script src='https://cdn.ampproject.org/v0/validator.js'></script>
 
-<script>
-  var validationStatusEl = document.getElementById('validation-status');
-  var validationStatus = function(status) {
-    validationStatusEl.innerHTML = status;
-    if(status === 'FAIL') {
-        validationStatusEl.style.background = '#D50000';
-    } else {
-        validationStatusEl.style.background = '#33691E';
-    }
-  };
-  var copy = document.getElementById('copy');
-  var results;
-
-  Jotted.plugin('ampbin', function(jotted, options) {
-    jotted.on('change', function(params, callback) {
-      copy.value = params.content;
-      if(params.content.length > 0) {
-        results = amp.validator.validateString(params.content);
-        validationStatus(results.status);
-      }
-      callback(null, params);
-    });
-  });
-</script>
-
 <script src='/__/firebase/4.2.0/firebase-app.js'></script>
 <script src='/__/firebase/4.2.0/firebase-auth.js'></script>
 <script src='/__/firebase/4.2.0/firebase-database.js'></script>
 <script src='/__/firebase/init.js'></script>
+
 <!-- inject:js -->
 <!-- endinject -->
 
 <script>
 var page;
-if(window.location.hash) {
-  page = window.location.hash;
-} else {
-  page = '/';
-}
+if(window.location.hash) { page = window.location.hash; } else { page = '/'; }
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
